syntax = "proto3";

package syft.lib.sympc;

import "proto/lib/torch/tensor.proto";
import "proto/lib/sympc/session.proto";

message ReplicatedSharedTensor {
  repeated syft.lib.torch.TensorData tensor = 1;
  syft.lib.sympc.MPCSession session = 2;
}
